# webp_extractor

./: PERFORMANCE_OPTIMIZATION.md  README.md  pubspec.yaml
android/: README.md  SETUP_LIBWEBP.md  build.gradle  build_libwebp.sh  download_libwebp.sh  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  libwebp_wrapper.cpp  webp_wrapper.cpp
android/src/main/kotlin/com/example/webp_extractor/: WebpExtractorPlugin.kt
android/src/test/kotlin/com/example/webp_extractor/: WebpExtractorPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/webp_extractor_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: webp_extractor.podspec
ios/Classes/: WebPExtractor.swift  WebPExtractorManager.swift  WebpExtractorPlugin.swift
lib/: webp_extractor.dart
